Add header block
Automated migration updates generated by Experience Modernization Agent.

Changed files (4):
- blocks/header/header.css
- menu-current.png
- menu-fix-verification.png
- menu-source.png

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -58,6 +58,10 @@ header nav a:any-link {
   color: currentcolor;
 }
 
+header nav .nav-sections a:any-link {
+  color: rgb(0 0 0 / 75%);
+}
+
 /* hamburger */
 header nav .nav-hamburger {
   grid-area: hamburger;
@@ -184,7 +188,11 @@ header nav .nav-sections ul {
 }
 
 header nav .nav-sections ul > li {
-  font-weight: 500;
+  font-weight: 400;
+}
+
+header nav .nav-sections ul > li > strong {
+  font-weight: 400;
 }
 
 header nav .nav-sections ul > li > ul {
@@ -279,4 +287,23 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+}
+
+header nav .nav-tools a:any-link {
+  display: inline-block;
+  padding: 16px 24px;
+  border-radius: 1600px;
+  font-size: var(--body-font-size-m);
+  font-weight: 400;
+  line-height: 1.2;
+  color: var(--text-color);
+  text-decoration: none;
+  box-shadow: var(--text-color) 0 0 0 2px inset, var(--accent-color-50) 4px 4px 0 0;
+  transition: background-color 0.2s cubic-bezier(0.165, 0.84, 0.44, 1), box-shadow 0.2s;
+}
+
+header nav .nav-tools a:hover {
+  background-color: var(--accent-color-10);
+  box-shadow: var(--text-color) 0 0 0 2px inset, var(--accent-color-50) 7px 7px 0 0;
+  text-decoration: none;
 }
