Add header block
Automated migration updates generated by Experience Modernization Agent.

Changed files (9):
- blocks/header/header.css
- migrated-nav-1280.png
- migrated-nav-fixed.png
- migrated-nav-full.png
- migrated-nav-zoomed.png
- migrated-nav.png
- source-nav-1280.png
- source-nav-zoomed.png
- source-nav.png

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -153,10 +153,11 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  flex-basis: auto;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
+  white-space: nowrap;
 }
 
 header nav .nav-brand img {
@@ -287,6 +288,7 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  flex-shrink: 0;
 }
 
 header nav .nav-tools a:any-link {
