--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -154,8 +154,8 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 header .nav-brand {
   grid-area: brand;
   flex-basis: auto;
-  font-size: var(--heading-font-size-s);
-  font-weight: 700;
+  font-size: var(--body-font-size-m);
+  font-weight: 400;
   line-height: 1;
   white-space: nowrap;
 }
